# Bildungsurlaub_AzureAI

./: .gitignore  README.md  pyproject.toml
scripts/: pyproject.toml  requirements.txt
scripts/azure_func1/: __init__.py  api_app.py  function_app.py  requirements.txt
scripts/finetuning/: sample_about_me.jsonl  sample_bert_gollnick.jsonl
scripts/function_deployment/: bin_class_model.onnx  function_app.py  labels.json  model_lin_reg.onnx  requirements.txt
scripts/iac/: my_deployment.ps1  storage.bicep
scripts/infrastructure_as_code/: deploy.ps1  main.bicep  new_storage_account.bicep  storage_account2.bicep
scripts/multimodal_rag/: multimodal_rag.py
scripts/playground/: chat_gpt4omini.py  chat_gpt4omini_langchain.py  img_dalle3.py  parallel_chain.py  semantic_router.py  simple_chain.py  structured_outputs_movies.py  structured_outputs_translation.py
scripts/prompt_flow/: simple_flow.py
scripts/table_rag/: table_rag.py
scripts/vector_db/: create_embeddings.py  data_chunking.py  data_ingestion_pipeline.py  data_loading_blob.py  data_loading_directory.py  data_loading_exercise.py  data_loading_mult_types_from_dir.py  db_querying_aisearch.py  db_querying_local.py  multimodal_embedding.py  speech.py  speech_data_download.py  use_search.py  use_storage.py
